<resources>
    <string name="app_name">Monitor Wise</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="app_name_monitor">Monitor</string>
    <string name="app_name_wise">Wise</string>
    <string name="login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="key">Chave de Ativação</string>
    <string name="showPassword">Mostrar Senha</string>
    <string name="changePassword">Esqueceu a Senha?</string>
    <string name="signUp">Cadastre-se</string>
    <string name="passwordConfirm">Senha Novamente</string>
    <string name="register">Cadastro</string>
    <string name="choseCourse">Escolha seu curso</string>
    <string name="period">Período</string>
    <string name="morning">Matutino</string>
    <string name="afternoon">Vespertino</string>
    <string name="night">Noturno</string>
    <string name="choseDiscipline">Disciplina que deseja ministrar</string>
    <string name="calendar">Agenda</string>
    <string name="historic">Histórico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Iniciar</string>
    <string name="day">Dia(s): </string>
    <string name="status">Status: </string>
    <string name="hour">Horário(s): </string>
    <string name="local">Local(is): </string>
    <string name="discipline">Disciplina: </string>
    <string name="presence_list">Lista de Presença</string>
    <string name="search_students">Buscar Alunos</string>
    <string name="add">Adicionar</string>
    <string name="subjects">Assunto(s): </string>
    <string name="example">Ex: Laço de repetição While</string>
    <string name="registration">Matrícula: </string>
    <string name="chose_month">Selecione o mês</string>
    <string name="chose_discipline">Selecione a(s) disciplina(s)</string>
    <string name="total_hours">Horas Totais: </string>
    <string name="select_month">Selecione o(s) mês(es)</string>
    <string name="confirm">Confirmar</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="cancelar">cancelar</string>
    <string name="register_course_key">register_course</string>
    <string name="register_discipline_key">register_discipline</string>
    <string name="full_name">Nome completo</string>
    <string name="monitor_of">Monitor de: </string>
    <string name="finish_monitorie">Finalizar</string>
    <string name="share">Buscar</string>
    <string name="lucas_name">Lucas Bella Vitta Mosca</string>
    <string name="mateus_name">Mateus Rocha Pereira</string>
    <string name="luigi_name">Luigi Cavalieri</string>
    <string name="vivian_name">Vivian Magda S. P. M. de Martino</string>
    <string name="carlos_name">Carlos Augusto Hubert</string>
    <string name="save">salvar</string>
    <string name="students_media">Média de Alunos</string>
    <string name="period_monitor">Período:</string>
    <string name="choseMonth">Selecione um Mês</string>
    <string name="matricula">"Matrícula: "</string>
    <string name="logout">Sair</string>
    <string name="exit">sair</string>
    <string name="beginMonitorie">Realizar Monitoria</string>
</resources>