<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            style="@style/text_view_title"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_login"
            style="@style/edit_text_login_fields"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/afHintEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />


        <EditText
            android:id="@+id/edit_text_password"
            style="@style/edit_text_login_fields"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/afHintPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login" />

        <CheckBox
            android:id="@+id/check_box_show_password_login"
            style="@style/check_box_show_password"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

        <Button
            android:id="@+id/button_login"
            style="@style/button_style"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_show_password_login" />

        <Button
            android:id="@+id/button_change_password"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            style="@style/button_link_style"
            android:text="@string/changePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_marginTop="5dp"
            android:text="@string/signUp"
            style="@style/button_link_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_change_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>