<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default">

        <TextView
            android:id="@+id/text_view_period"
            style="@style/text_view_subtitle"
            android:text="@string/period"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/check_box_morning"
            style="@style/check_box_turns"
            android:onClick="onCheckboxClicked"
            android:text="@string/morning"
            app:layout_constraintStart_toStartOf="@id/text_view_period"
            app:layout_constraintTop_toBottomOf="@+id/text_view_period" />

        <CheckBox
            android:id="@+id/check_box_night"
            style="@style/check_box_turns"
            android:layout_marginStart="@dimen/margin_default"
            android:onClick="onCheckboxClicked"
            android:text="@string/night"
            app:layout_constraintStart_toEndOf="@+id/check_box_morning"
            app:layout_constraintTop_toBottomOf="@+id/text_view_period" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>