<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/button_background"
    android:gravity="center"
    android:paddingTop="20dp"
    android:foreground="@color/black_foreground"
    android:orientation="vertical">

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name_monitor"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_default_minimum"
        android:layout_marginEnd="@dimen/margin_default_minimum"
        android:background="@drawable/app_background_image" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name_wise"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_big"
        android:layout_marginBottom="@dimen/margin_default_minimum"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_white_rounded" />

</LinearLayout>