<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="listener"
            type="com.example.monitorwise.screen.user.login.LoginActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_text_login"
            style="@style/edit_text_login_fields"
            android:layout_marginTop="@dimen/margin_big"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/edit_text_login_fields"
            android:layout_marginTop="@dimen/margin_default"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login" />

        <CheckBox
            android:id="@+id/check_box_show_password_login"
            style="@style/check_box_show_password"
            android:onClick="onCheckboxClicked"
            app:layout_constraintStart_toStartOf="@id/edit_text_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button_style"
            android:layout_marginTop="@dimen/margin_big_extra"
            android:onClick="@{listener::onClick}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_show_password_login" />

        <Button
            android:id="@+id/btn_change_password"
            style="@style/button_link_style"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_default_minimum"
            android:onClick="@{listener::onClick}"
            android:text="@string/changePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/button_link_style"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_big"
            android:onClick="@{listener::onClick}"
            android:text="@string/signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default_minimum"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_login"
            tools:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>