<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_default"
        android:paddingBottom="@dimen/margin_default">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_micro_large"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro_large"
                android:text="@string/discipline"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_monitor_discipline_historic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:textColor="@color/black"
                tools:text="Algorítmo, Programação em microinformática" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_micro_large"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro_large"
                android:text="@string/total_hours"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_hour_historic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:textColor="@color/black"
                tools:text="12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro_large"
                android:text="@string/students_media"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_students_media_historic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:textColor="@color/black"
                tools:text="2" />
        </LinearLayout>
    </LinearLayout>
</layout>