<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_default">


        <TextView
            android:id="@+id/txt_monitor_item_discipline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_default"
            android:textColor="@color/accent"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            tools:text="Programação em Microinforática" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_extra"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/day"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_monitor_item_week_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toBottomOf="@+id/txt_days"
                app:layout_constraintStart_toEndOf="@+id/txt_days"
                app:layout_constraintTop_toTopOf="@+id/txt_days"
                tools:text="Segunda-Feira" />

            <TextView
                android:id="@+id/txt_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_extra"
                android:layout_marginTop="@dimen/margin_micro"
                android:text="@string/hour"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_monitor_item_week_day" />

            <TextView
                android:id="@+id/txt_monitor_item_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toBottomOf="@+id/txt_hour"
                app:layout_constraintStart_toEndOf="@+id/txt_hour"
                app:layout_constraintTop_toTopOf="@+id/txt_hour"
                tools:text="18:00h - 18:30h" />

            <TextView
                android:id="@+id/txt_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_extra"
                android:layout_marginTop="@dimen/margin_micro"
                android:text="@string/local"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_hour" />

            <TextView
                android:id="@+id/txt_monitor_item_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toBottomOf="@+id/txt_local"
                app:layout_constraintStart_toEndOf="@+id/txt_local"
                app:layout_constraintTop_toTopOf="@+id/txt_local"
                tools:text="Sala 7" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_super"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginEnd="@dimen/margin_super"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_monitor_item_local" />


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/margin_default"
                android:contentDescription="@string/confirm"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>